--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -1,28 +1,28 @@
 @font-face {
-	font-family: 'FuturaPT-Bold';
+	font-family: 'FuturaPTBold';
 	font-display: swap;
-	src: url("../fonts/FuturaPT-Bold.woff2") format("woff2"), url("../fonts/FuturaPT-Bold.woff") format("woff");
+	src: url("../fonts/FuturaPT-Bold.woff2") format("woff2");
 	font-weight: 600;
 	font-style: normal;
 }
 @font-face {
-	font-family: 'FuturaPT-Book';
+	font-family: 'FuturaPTBook';
 	font-display: swap;
-	src: url("../fonts/FuturaPT-Book.woff2") format("woff2"), url("../fonts/FuturaPT-Book.woff") format("woff");
+	src: url("../fonts/FuturaPT-Book.woff2") format("woff2");
 	font-weight: 400;
 	font-style: normal;
 }
 @font-face {
-	font-family: 'FuturaPT-Light';
+	font-family: 'FuturaPTLight';
 	font-display: swap;
-	src: url("../fonts/FuturaPT-Light.woff2") format("woff2"), url("../fonts/FuturaPT-Light.woff") format("woff");
+	src: url("../fonts/FuturaPT-Light.woff2") format("woff2");
 	font-weight: 300;
 	font-style: normal;
 }
 @font-face {
-	font-family: 'FuturaPT-Medium';
+	font-family: 'FuturaPTMedium';
 	font-display: swap;
-	src: url("../fonts/FuturaPT-Medium.woff2") format("woff2"), url("../fonts/FuturaPT-Medium.woff") format("woff");
+	src: url("../fonts/FuturaPT-Medium.woff2") format("woff2");
 	font-weight: 500;
 	font-style: normal;
 }
