--- a/src/scss/template_styles.scss
+++ b/src/scss/template_styles.scss
@@ -13,7 +13,7 @@
 // @import "fonts/icons";
 
 // Шрифт по умолчанию ==============================================================================================================================================================================================================================================================================
-$fontFamily: " Futura PT-Light";
+$fontFamily: 'FuturaPT-Light';
 $fontSize: rem(16); // где 16(px) - размер шрифта по умолчанию из макета
 
 // НАСТРОЙКИ ===============================================================================================================================================================================================================================================================================================
