--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -1,15 +1,36 @@
 // html, body{
 // 	font-family: 'FuturaPTLight', sans-serif;
 // }
+.fs-25{
+	font-size: 25px;
+}
+.fs-30{
+	font-size: 30px;
+}
 .fs-32{
 	font-size: 32px;
 }
+.fs-40{
+	font-size: 40px;
+}
 .fs-46{
 	font-size: 46px;
+}
+.fs-48{
+	font-size: 48px;
 }
 .fs-56{
 	font-size: 56px;
 }
 .fs-64{
 	font-size: 64px;
+}
+.fw-300{
+	font-weight: 300;
+}
+.fw-500{
+	font-weight: 500;
+}
+.fw-600{
+	font-weight: 600;
 }
