--- a/public_html/bitrix/templates/bestmaket_new/template_styles.css
+++ b/public_html/bitrix/templates/bestmaket_new/template_styles.css
@@ -19,8 +19,8 @@
 .tablebodytext {
 	display: none;
 }
-.fs-17{
-    font-size: 17px;
+.fs-17 {
+	font-size: 17px;
 }
 html,
 body {
@@ -145,7 +145,7 @@ body {
 	font-weight: 300;
 }
 .header .phones .open-popup {
-	color: #167EC2;
+	color: #167ec2;
 	font-size: 17px;
 }
 .header .open-menu {
@@ -166,8 +166,8 @@ body {
 	list-style: none;
 	width: 100%;
 	display: flex;
-    font-size: 20px;
-    font-weight: 300;
+	font-size: 20px;
+	font-weight: 300;
 	justify-content: space-between;
 }
 .header .menu ul a {
@@ -197,24 +197,24 @@ body {
 	width: 32px;
 	height: 1px;
 	background-color: #fff;
-	}
-	.header .burger__inner span{
-		position: relative;
-	}
-	.header .burger__inner span::after,
-	.header .burger__inner span::before {
-		content: "";
-		display: block;
-		left: 0;
-		right: 0;
-		position: absolute;
-		}
-	.header .burger__inner span::after{
-		top: -8px;
-		}
-		.header .burger__inner span::before{
-			bottom: -8px;
-		}
+}
+.header .burger__inner span {
+	position: relative;
+}
+.header .burger__inner span::after,
+.header .burger__inner span::before {
+	content: '';
+	display: block;
+	left: 0;
+	right: 0;
+	position: absolute;
+}
+.header .burger__inner span::after {
+	top: -8px;
+}
+.header .burger__inner span::before {
+	bottom: -8px;
+}
 .slider-large {
 	position: relative;
 }
@@ -4721,4 +4721,204 @@ input:focus {
 	.steps-wrap .step-item {
 		width: 49%;
 	}
+}
+:root {
+	--bs-blue: #167ec2;
+	--bs-indigo: #6610f2;
+	--bs-purple: #6f42c1;
+	--bs-pink: #d63384;
+	--bs-red: #dc3545;
+	--bs-orange: #fd7e14;
+	--bs-yellow: #ffc107;
+	--bs-green: #198754;
+	--bs-teal: #20c997;
+	--bs-cyan: #0dcaf0;
+	--bs-black: #000;
+	--bs-white: #fff;
+	--bs-gray: #6c757d;
+	--bs-gray-dark: #343a40;
+	--bs-gray-100: #f8f9fa;
+	--bs-gray-200: #e9ecef;
+	--bs-gray-300: #dee2e6;
+	--bs-gray-400: #ced4da;
+	--bs-gray-500: #adb5bd;
+	--bs-gray-600: #6c757d;
+	--bs-gray-700: #495057;
+	--bs-gray-800: #343a40;
+	--bs-gray-900: #212529;
+	--bs-primary: #167ec2;
+	--bs-secondary: #f4f4f4;
+	--bs-success: #198754;
+	--bs-info: #0dcaf0;
+	--bs-warning: #ffc107;
+	--bs-danger: #dc3545;
+	--bs-light: #f8f9fa;
+	--bs-dark: #000;
+	--bs-primary-rgb: 22, 126, 194;
+	--bs-secondary-rgb: 244, 244, 244;
+	--bs-success-rgb: 25, 135, 84;
+	--bs-info-rgb: 13, 202, 240;
+	--bs-warning-rgb: 255, 193, 7;
+	--bs-danger-rgb: 220, 53, 69;
+	--bs-light-rgb: 248, 249, 250;
+	--bs-dark-rgb: 0, 0, 0;
+	--bs-white-rgb: 255, 255, 255;
+	--bs-black-rgb: 0, 0, 0;
+	--bs-body-color-rgb: 0, 0, 0;
+	--bs-body-bg-rgb: 255, 255, 255;
+	--bs-font-sans-serif: 'FuturaPTLight', system-ui, -apple-system, Arial,
+		sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
+		'Noto Color Emoji';
+	--bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas,
+		'Liberation Mono', 'Courier New', monospace;
+	--bs-gradient: linear-gradient(
+		180deg,
+		rgba(255, 255, 255, 0.15),
+		rgba(255, 255, 255, 0)
+	);
+	--bs-body-font-family: var(--bs-font-sans-serif);
+	--bs-body-font-size: 1rem;
+	--bs-body-font-weight: 400;
+	--bs-body-line-height: 1.5;
+	--bs-body-color: #212529;
+	--bs-body-bg: #fff;
+	--bs-border-width: 1px;
+	--bs-border-style: solid;
+	--bs-border-color: #dee2e6;
+	--bs-border-color-translucent: rgba(0, 0, 0, 0.175);
+	--bs-border-radius: 0.375rem;
+	--bs-border-radius-sm: 0.25rem;
+	--bs-border-radius-lg: 0.5rem;
+	--bs-border-radius-xl: 1rem;
+	--bs-border-radius-2xl: 2rem;
+	--bs-border-radius-pill: 50rem;
+	--bs-link-color: #167ec2;
+	--bs-link-hover-color: #167ec2;
+	--bs-code-color: #d63384;
+	--bs-highlight-bg: #fff3cd;
+}
+
+.fs-20 {
+  font-size: 20px;
+}
+
+.fs-24 {
+  font-size: 24px;
+}
+
+.fs-25 {
+  font-size: 25px;
+}
+
+.fs-30 {
+  font-size: 30px;
+}
+
+.fs-32 {
+  font-size: 32px;
+}
+
+.fs-36 {
+  font-size: 36px;
+}
+
+.fs-40 {
+  font-size: 40px;
+}
+
+.fs-46 {
+  font-size: 46px;
+}
+
+.fs-48 {
+  font-size: 48px;
+}
+
+.fs-56 {
+  font-size: 56px;
+}
+
+.fs-64 {
+  font-size: 64px;
+}
+
+.fw-300 {
+  font-weight: 300;
+}
+
+.fw-500 {
+  font-weight: 500;
+}
+
+.fw-600 {
+  font-weight: 600;
+}
+.main {
+	overflow: hidden;
+	background: linear-gradient(
+		270deg,
+		rgba(141, 206, 38, 0.5),
+		rgb(22, 126, 194)
+	);
+	background-size: 400% 400%;
+	animation: gradientAnimation 15s ease infinite;
+}
+
+@keyframes gradientAnimation {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+.blur-overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(141, 206, 38, 0.5);
+	box-shadow: 0px 4px 70px -155px rgba(255, 255, 255, 0.25);
+	filter: blur(194px);
+	z-index: -1;
+	animation: blurAnimation 15s ease infinite;
+}
+
+@keyframes blurAnimation {
+	0% {
+		background: rgba(141, 206, 38, 0.5);
+	}
+	50% {
+		background: rgb(22, 126, 194);
+	}
+	100% {
+		background: rgba(141, 206, 38, 0.5);
+	}
+}
+.main__fon-text {
+	animation: textAnimation 20s linear infinite;
+	font-size: 400px;
+	font-weight: 600;
+	line-height: 513px;
+	text-align: left;
+	text-transform: uppercase;
+	letter-spacing: 0;
+	z-index: 1;
+	
+}
+
+@keyframes textAnimation {
+	0% {
+		transform: translateX(100%);
+	}
+	100% {
+		transform: translateX(-100%);
+	}
+}
+.main .slider__item{
+	z-index: 2;
 }
