--- a/public_html/bitrix/templates/bestmaket_new/template_styles.css
+++ b/public_html/bitrix/templates/bestmaket_new/template_styles.css
@@ -4799,59 +4799,59 @@ input:focus {
 }
 
 .fs-20 {
-  font-size: 20px;
+	font-size: 20px;
 }
 
 .fs-24 {
-  font-size: 24px;
+	font-size: 24px;
 }
 
 .fs-25 {
-  font-size: 25px;
+	font-size: 25px;
 }
 
 .fs-30 {
-  font-size: 30px;
+	font-size: 30px;
 }
 
 .fs-32 {
-  font-size: 32px;
+	font-size: 32px;
 }
 
 .fs-36 {
-  font-size: 36px;
+	font-size: 36px;
 }
 
 .fs-40 {
-  font-size: 40px;
+	font-size: 40px;
 }
 
 .fs-46 {
-  font-size: 46px;
+	font-size: 46px;
 }
 
 .fs-48 {
-  font-size: 48px;
+	font-size: 48px;
 }
 
 .fs-56 {
-  font-size: 56px;
+	font-size: 56px;
 }
 
 .fs-64 {
-  font-size: 64px;
+	font-size: 64px;
 }
 
 .fw-300 {
-  font-weight: 300;
+	font-weight: 300;
 }
 
 .fw-500 {
-  font-weight: 500;
+	font-weight: 500;
 }
 
 .fw-600 {
-  font-weight: 600;
+	font-weight: 600;
 }
 .main {
 	overflow: hidden;
@@ -4907,8 +4907,7 @@ input:focus {
 	text-align: left;
 	text-transform: uppercase;
 	letter-spacing: 0;
-	z-index: 1;
-	
+	/* z-index: 1; */
 }
 
 @keyframes textAnimation {
@@ -4919,6 +4918,77 @@ input:focus {
 		transform: translateX(-100%);
 	}
 }
-.main .slider__item{
+.main .slider__item {
 	z-index: 2;
 }
+
+.flex-direction-nav {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	position: absolute;
+    top: 50%;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+	}
+.flex-direction-nav li a {
+text-indent: -9999px;
+	
+	display: block;
+	box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+	border-radius: 50%;
+position: relative;
+	width: 60px;
+	height: 60px;
+	background: #fff url('images/arrow-slider.svg') no-repeat center / 28px;
+	z-index: 10;
+	cursor: pointer;
+}
+.flex-direction-nav li a::before {
+	content: '';
+	display: block;
+	position: absolute;
+	transform: translateY(-50%);
+	background: url('images/hover-slider.png') no-repeat center / cover;
+	width: 143px;
+	height: 148px;
+	top: 50%;
+	left: -50%;
+	z-index: -1;
+	opacity: 0;
+	transition: all 0.2s ease;
+	
+	}
+	.flex-direction-nav li a:hover::before {
+		opacity: 1;
+	}
+.flex-direction-nav li a.flex-next {
+	
+	transform: rotateY(180deg);
+}
+
+.flex-control-nav.flex-control-paging{
+	display: flex;
+	list-style: none;
+	padding: 0;
+	margin: 0;
+	gap: 10px;
+	justify-content: center;
+	align-items:center;
+	margin-top: 80px;
+	}
+	
+		
+		.flex-control-nav.flex-control-paging li a{
+			cursor: pointer;
+			display: block;
+			width: 40px;
+			height: 5px;
+    border-radius: 5px;
+    background-color: #d9d9d9;
+    text-indent: -9999px;
+		}
+		.flex-control-nav.flex-control-paging li a.flex-active{
+			background-color: #167ec2;
+		}
