--- a/public_html/bitrix/templates/bestmaket_new/template_styles.css
+++ b/public_html/bitrix/templates/bestmaket_new/template_styles.css
@@ -5376,3 +5376,25 @@ input:focus {
 		
 		
 }
+.why-work__text--left {
+  background-color: #f3f3f3;
+  max-width: 70%;
+}
+.why-work__text--right {
+  background-color: #e9e9e9;
+  max-width: 70%;
+  margin-left: auto;
+  margin-top: -35px;
+}
+.why-work__text--right::before {
+  content: "";
+  display: block;
+  border: 1px solid #000;
+  border-radius: 5px;
+  position: absolute;
+  left: -26%;
+  right: 10%;
+  top: -15%;
+  bottom: 55%;
+  z-index: -1;
+}
