--- a/public_html/bitrix/templates/bestmaket_new/template_styles.css
+++ b/public_html/bitrix/templates/bestmaket_new/template_styles.css
@@ -1184,8 +1184,8 @@ body {
 	padding: 2.63em 8.7% 25px;
 }
 .clients-slider .intro {
-	width: 30%;
-	float: left;
+	/* width: 30%; */
+	/* float: left; */
 	position: relative;
 	z-index: 10;
 	background: #fff;
@@ -1211,8 +1211,8 @@ body {
 	vertical-align: top;
 }
 .clients-slider .content {
-	width: 70%;
-	float: left;
+	/* width: 70%; */
+	/* float: left; */
 }
 .clients-slider .image {
 	padding: 0 2.8% 0 8.5%;
@@ -1292,9 +1292,9 @@ body {
 .clients-list li {
 	background-position: 0 0;
 	background-repeat: no-repeat;
-	float: left;
-	width: 19%;
-	padding: 25px 0 0 10%;
+	/* float: left; */
+	width: 30%;
+	padding: 60px 0 0 0;
 	margin: 0 2%;
 }
 .clients-list ul ul {
@@ -1321,9 +1321,9 @@ body {
 	display: inline-block;
 	text-decoration: none;
 	font-weight: 300;
-	border: 1px solid #d4d4d4;
+	border: 1px solid #000;
 	padding: 12px 42px;
-	border-radius: 23px;
+	border-radius: 27px;
 }
 .clients-list .btn-all a:hover {
 	border-color: #2c80c5;
@@ -4912,6 +4912,8 @@ input:focus {
 	text-align: left;
 	text-transform: uppercase;
 	letter-spacing: 0;
+	left: 0;
+	right: 0;
 	/* z-index: 1; */
 }
 
@@ -5422,27 +5424,80 @@ input:focus {
 	margin-top: auto;
 }
 .form-green .form-submit {
-    text-align: center;
-        margin-bottom: 0;
-    margin-top: auto;
+	text-align: center;
+	margin-bottom: 0;
+	margin-top: auto;
 }
 .form-green .form-submit button {
-    font-size: 24px;
-    font-family: inherit;
-    color: #fff;
-    cursor: pointer;
-    background-color: #8dce26;
-    padding: 12px 60px;
-    border: none;
-    border-radius: 27px;
+	font-size: 24px;
+	font-family: inherit;
+	color: #fff;
+	cursor: pointer;
+	background-color: #8dce26;
+	padding: 12px 60px;
+	border: none;
+	border-radius: 27px;
 }
 .form-green .form-submit button:hover {
-    background: #fff;
-		color: #8dce26;
-		border: 1px solid #8dce26;
+	background: #fff;
+	color: #8dce26;
+	border: 1px solid #8dce26;
 }
 .form-green .private .check {
-    margin-bottom: 10px;
-    font-weight: 300;
-		max-width: 57%;
+	margin-bottom: 10px;
+	font-weight: 300;
+	max-width: 57%;
+}
+.clients-main .large-title {
+	padding: 0;
+	position: relative;
+	z-index: 10;
+	color: #000;
+	font-size: 64px;
+	text-transform: none;
+	font-weight: 300;
+	line-height: 1;
+	margin-bottom: 60px;
+}
+.clients-main .large-title small {
+	display: block;
+	font-size: 26px;
+	text-transform: none;
+	line-height: 129%;
+}
+.clients-slider .slides .slider-contaner {
+	display: block;
+	padding: 0;
+	padding-bottom: 42px;
+	overflow: hidden;
+}
+.clients-slider .description {
+	padding: 27px 60px 12px 50px;
+	margin-top: 0;
+	background: #fff;
+	line-height: 20px;
+	color: #444a50;
+	font-style: normal;
+	font-weight: 300;
+	border-left: 7px solid #167ec2;
+	box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+}
+.clients-slider .intro {
+	position: absolute;
+	left: -10%;
+	bottom: -6%;
+	width: 20%;
+	box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+}
+.flex-control-nav.flex-control-paging {
+	margin-top: 10px;
+}
+.clients-slider .box {
+	padding: 35% 36px 13% 10%;
+}
+.clients-slider .content {
+	position: absolute;
+	bottom: 6%;
+	right: 3%;
+	width: 80%;
 }
