--- a/public_html/bitrix/templates/bestmaket_new/template_styles.css
+++ b/public_html/bitrix/templates/bestmaket_new/template_styles.css
@@ -331,26 +331,26 @@ body {
 	display: flex;
 	justify-content: center;
 	gap: 10rem;
-	}
-	.request-calc-2  .form-green {
-		font-size: 24px;
-		color: #fff;
-		font-weight: 300;
-		background: #8dce26;
-		/* padding: 15px 10% 25px; */
-		/* box-shadow: 0 0 10px #676767; */
-		}
-		.request-calc-2.gray  .form-green {
-			color: #000;
-			}
-			.form-blue {
-				font-size: 18px;
-				color: #fff;
-				font-weight: 300;
-				background: rgba(44, 128, 197, 0.6);
+}
+.request-calc-2 .form-green {
+	font-size: 24px;
+	color: #fff;
+	font-weight: 300;
+	background: #8dce26;
+	/* padding: 15px 10% 25px; */
+	/* box-shadow: 0 0 10px #676767; */
+}
+.request-calc-2.gray .form-green {
+	color: #000;
+}
+.form-blue {
+	font-size: 18px;
+	color: #fff;
+	font-weight: 300;
+	background: rgba(44, 128, 197, 0.6);
 	padding: 15px 10% 25px;
 	box-shadow: none;
-	}
+}
 .form-green .form-row {
 	margin: 10px 0 20px;
 }
@@ -371,11 +371,10 @@ body {
 	background: none;
 	border: none;
 	border-bottom: 1px solid #fff;
-	}
-	.request-calc-2.gray  .form-green .form-row .inp-text {
-		
-		border-bottom: 1px solid #000;
-	}
+}
+.request-calc-2.gray .form-green .form-row .inp-text {
+	border-bottom: 1px solid #000;
+}
 .form-green a:hover {
 	color: #2c80c5;
 }
@@ -5380,12 +5379,14 @@ input:focus {
 .why-work__text--left {
 	background-color: #f3f3f3;
 	max-width: 70%;
+	line-height: 1;
 }
 .why-work__text--right {
 	background-color: #e9e9e9;
 	max-width: 70%;
 	margin-left: auto;
-	margin-top: -35px;
+	margin-top: -20px;
+	line-height: 1;
 }
 .why-work__text--right::before {
 	content: '';
@@ -5404,10 +5405,10 @@ input:focus {
 }
 .request-calc-2.gray {
 	background-color: #f6f6f6;
-	}
-	.request-calc-2.gray .form-green .form-row .inp-text {
-		color: #000;
-	}
+}
+.request-calc-2.gray .form-green .form-row .inp-text {
+	color: #000;
+}
 .request-calc-2 .form-green {
 	background-color: transparent;
 	box-shadow: none;
@@ -5417,7 +5418,7 @@ input:focus {
 	font-weight: 300;
 	line-height: 1;
 }
-.request-calc-2.gray .title{
+.request-calc-2.gray .title {
 	color: #000;
 }
 .form-green .file-upload .text-label {
@@ -5515,4 +5516,151 @@ input:focus {
 	bottom: 6%;
 	right: 3%;
 	width: 80%;
+}
+.main-makets .title {
+	font-weight: 300;
+	font-size: 64px;
+	line-height: 98%;
+	color: #000;
+	text-align: left;
+}
+.layouts-item {
+	float: none;
+	width: 48%;
+	margin: inherit;
+	background-position: 50% 0;
+	background-repeat: no-repeat;
+}
+.layouts-item .name {
+	font-weight: 300;
+	font-size: 24px;
+	line-height: 98%;
+	text-transform: uppercase;
+	color: #000;
+
+	padding: 0;
+	height: inherit;
+}
+.layouts-items {
+	gap: 36px;
+}
+.layouts-item {
+	border: 1px solid #c0c0c0;
+	border-radius: 5px;
+	background: rgba(255, 255, 255, 0.1);
+	padding-inline: 32px;
+}
+.item-list {
+	padding: 0;
+	margin: 0;
+}
+.item-list a {
+	font-weight: 300;
+	font-size: 20px;
+	line-height: 120%;
+	color: #000;
+}
+.layouts-item ul li.none {
+	opacity: 0;
+	height: 0;
+	overflow: hidden;
+	transition: opacity 0.5s ease, height 0.5s ease;
+}
+.layouts-item ul li.show {
+	opacity: 1;
+	height: auto;
+	transition: opacity 0.5s ease, height 0.5s ease;
+}
+.layouts-item ul li .display-all {
+	background: url('images/arrow_right.svg') no-repeat center / cover;
+	color: #8dce26;
+	text-decoration: none;
+	border: none;
+	cursor: pointer;
+	height: 18px;
+	width: 18px;
+	display: block;
+	padding: 0;
+}
+.layouts-item ul li.small {
+	right: 30px;
+	top: 30px;
+	height: 18px;
+	position: absolute;
+	width: 18px;
+}
+.layouts-item ul li .display-all.rotate {
+	transform: rotate(135deg);
+	transition: transform 0.3s ease;
+}
+.instruments__title {
+	line-height: 1;
+	max-width: 50%;
+}
+.instruments__list {
+	padding-left: 80px;
+	list-style: none;
+}
+.instruments li {
+	position: relative;
+	padding-left: 60px;
+	padding-block: 6px;
+}
+.instruments li::before {
+	content: '';
+	display: block;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	width: 1px;
+	background-color: #167ec2;
+}
+.instruments li::after {
+	content: '';
+	display: block;
+	position: absolute;
+	width: 12px;
+	height: 12px;
+	top: 50%;
+	transform: translateY(-50%);
+	left: -6px;
+	background-color: #167ec2;
+}
+.instruments li:nth-child(1)::before {
+	top: 40%;
+}
+.instruments li:last-child::before {
+	bottom: 40%;
+}
+.advantages ul{
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
+.advantages li {
+  position: relative;
+  max-width: 20%;
+}
+.advantages li:last-child {
+  text-align: right;
+}
+.advantages li:last-child::before {
+  right: 0;
+}
+.advantages li::before {
+  content: "";
+  display: block;
+  position: absolute;
+  background-color: #000;
+  top: -23%;
+  bottom: 110%;
+  width: 1px;
+}
+.advantages li:first-child::before {
+  left: 0;
+}
+.advantages li:nth-child(2)::before {
+  left: 50%;
+  transform: translateX(-50%);
 }
